# text-classifier

./: pyproject.toml  text_classifier.ipynb
